tests/NormalTests/paczka1/fuzzy1/21205658.err
Error in line 1: 5awPJ9S A727 12,0
Error in line 9: p4B2Y84g9x A633 -1,5
Error in line 5: w1fsfLj1 A727 66,4
Error in line 7: A633 A754 39,4
Error in line 14: A633 A727 20,4
Error in line 15: EKmKxXUX6E3 A754 29,8
Error in line 22: 5awPJ9S A754 17,03
Error in line 8: p4B2Y84g9x A633 26,5
